[gd_scene load_steps=5 format=3 uid="uid://bycewuo66jpto"]

[ext_resource type="Script" path="res://scripts/test_mercframe.gd" id="1_wfyli"]
[ext_resource type="PackedScene" uid="uid://bywyxh2imo3x4" path="res://scenes/merc_frame.tscn" id="1_yeep7"]
[ext_resource type="Texture2D" uid="uid://ccux8yis6u7k7" path="res://assets/test_mercframe__1.png" id="3_ha5g1"]
[ext_resource type="Texture2D" uid="uid://vlbxcbhg6phg" path="res://assets/test_mercframe_2.png" id="4_kaxst"]

[node name="TestMercframe" type="Node"]
script = ExtResource("1_wfyli")

[node name="MercFrame" parent="." instance=ExtResource("1_yeep7")]
unique_name_in_owner = true
offset_left = 17.5
offset_right = 174.5
offset_bottom = 138.0

[node name="MercFrame2" parent="." instance=ExtResource("1_yeep7")]
unique_name_in_owner = true
offset_left = 216.5
offset_top = 2.0
offset_right = 373.5
offset_bottom = 140.0

[node name="MercFrame3" parent="." instance=ExtResource("1_yeep7")]
unique_name_in_owner = true
offset_left = 423.5
offset_top = 3.0
offset_right = 580.5
offset_bottom = 141.0

[node name="TestMercframe" type="Sprite2D" parent="."]
position = Vector2(305.5, 248)
texture = ExtResource("3_ha5g1")

[node name="MercFrame4" parent="." instance=ExtResource("1_yeep7")]
unique_name_in_owner = true
offset_left = 727.0
offset_top = 487.0
offset_right = 884.0
offset_bottom = 625.0

[node name="MercFrame5" parent="." instance=ExtResource("1_yeep7")]
unique_name_in_owner = true
offset_left = 728.0
offset_top = 323.0
offset_right = 885.0
offset_bottom = 461.0

[node name="MercFrame6" parent="." instance=ExtResource("1_yeep7")]
unique_name_in_owner = true
offset_left = 730.0
offset_top = 166.0
offset_right = 887.0
offset_bottom = 304.0

[node name="TestMercframe2" type="Sprite2D" parent="."]
position = Vector2(1008, 386)
texture = ExtResource("4_kaxst")
